--- a/styl/responsive.styl
+++ b/styl/responsive.styl
@@ -36,7 +36,7 @@
 // UP TO LANDSCAPE PHONE
 // ---------------------
 
-$media (max-width: 480px)
+@media (max-width: 480px)
 
   // Smooth out the collapsing/expanding nav
   .nav-collapse
@@ -124,7 +124,7 @@ $media (max-width: 480px)
 // LANDSCAPE PHONE TO SMALL DESKTOP & PORTRAIT TABLET
 // --------------------------------------------------
 
-$media (max-width: 767px)
+@media (max-width: 767px)
   // GRID & CONTAINERS
   // -----------------
   // Remove width from containers
@@ -155,7 +155,7 @@ $media (max-width: 767px)
 // PORTRAIT TABLET TO DEFAULT DESKTOP
 // ----------------------------------
 
-$media (min-width: 768px) and (max-width: 979px)
+@media (min-width: 768px) and (max-width: 979px)
 
   // Fixed grid
   $gridSystem-generate(12, 42px, 20px)
@@ -172,7 +172,7 @@ $media (min-width: 768px) and (max-width: 979px)
 
 // TABLETS AND BELOW
 // -----------------
-$media (max-width: 979px)
+@media (max-width: 979px)
 
   // UNFIX THE TOPBAR
   // ----------------
@@ -295,7 +295,7 @@ $media (max-width: 979px)
 // DEFAULT DESKTOP
 // ---------------
 
-$media (min-width: 980px)
+@media (min-width: 980px)
   .nav-collapse.collapse
     height: auto !important
 
@@ -306,7 +306,7 @@ $media (min-width: 980px)
 // LARGE DESKTOP & UP
 // ------------------
 
-$media (min-width: 1200px)
+@media (min-width: 1200px)
 
   // Fixed grid
   $gridSystem-generate(12, 70px, 30px)
