--- a/styl/bootstrap/mixins.styl
+++ b/styl/bootstrap/mixins.styl
@@ -509,43 +509,43 @@ $gradientBar($primaryColor, $secondaryColor)
 // Gradients
 $gradient-horizontal($startColor = #555, $endColor = #333)
   background-color: $endColor
-  background-image: -moz-linear-gradient(left, $startColor, $endColor) // FF 3.6+
-  background-image: -ms-linear-gradient(left, $startColor, $endColor) // IE10
-  background-image: -webkit-gradient(linear, 0 0, 100% 0, from($startColor), to($endColor)) // Safari 4+, Chrome 2+
-  background-image: -webkit-linear-gradient(left, $startColor, $endColor) // Safari 5.1+, Chrome 10+
-  background-image: -o-linear-gradient(left, $startColor, $endColor) // Opera 11.10
+  // background-image: -moz-linear-gradient(left, $startColor, $endColor) // FF 3.6+
+  // background-image: -ms-linear-gradient(left, $startColor, $endColor) // IE10
+  // background-image: -webkit-gradient(linear, 0 0, 100% 0, from($startColor), to($endColor)) // Safari 4+, Chrome 2+
+  // background-image: -webkit-linear-gradient(left, $startColor, $endColor) // Safari 5.1+, Chrome 10+
+  // background-image: -o-linear-gradient(left, $startColor, $endColor) // Opera 11.10
   background-image: linear-gradient(left, $startColor, $endColor) // Le standard
   background-repeat: repeat-x
   filter: "progid:DXImageTransform.Microsoft$gradient(startColorstr=$startColor, endColorstr=$endColor, GradientType=1)" // IE9 and down
 
 $gradient-vertical($startColor = #555, $endColor = #333)
   background-color: mix($startColor, $endColor, 60%)
-  background-image: -moz-linear-gradient(top, $startColor, $endColor) // FF 3.6+
-  background-image: -ms-linear-gradient(top, $startColor, $endColor) // IE10
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), to($endColor)) // Safari 4+, Chrome 2+
-  background-image: -webkit-linear-gradient(top, $startColor, $endColor) // Safari 5.1+, Chrome 10+
-  background-image: -o-linear-gradient(top, $startColor, $endColor) // Opera 11.10
+  // background-image: -moz-linear-gradient(top, $startColor, $endColor) // FF 3.6+
+  // background-image: -ms-linear-gradient(top, $startColor, $endColor) // IE10
+  // background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), to($endColor)) // Safari 4+, Chrome 2+
+  // background-image: -webkit-linear-gradient(top, $startColor, $endColor) // Safari 5.1+, Chrome 10+
+  // background-image: -o-linear-gradient(top, $startColor, $endColor) // Opera 11.10
   background-image: linear-gradient(top, $startColor, $endColor) // The standard
   background-repeat: repeat-x
   filter: "progid:DXImageTransform.Microsoft$gradient(startColorstr=$startColor, endColorstr=$endColor, GradientType=0)" // IE9 and down
 
-$gradient-directional($startColor = #555, $endColor = #333, $deg = 45deg)
+$gradient-directional($startColor = #555, $endColor = #333, $deg = top right)
   background-color: $endColor
   background-repeat: repeat-x
-  background-image: -moz-linear-gradient($deg, $startColor, $endColor) // FF 3.6+
-  background-image: -ms-linear-gradient($deg, $startColor, $endColor) // IE10
-  background-image: -webkit-linear-gradient($deg, $startColor, $endColor) // Safari 5.1+, Chrome 10+
-  background-image: -o-linear-gradient($deg, $startColor, $endColor) // Opera 11.10
+  // background-image: -moz-linear-gradient($deg, $startColor, $endColor) // FF 3.6+
+  // background-image: -ms-linear-gradient($deg, $startColor, $endColor) // IE10
+  // background-image: -webkit-linear-gradient($deg, $startColor, $endColor) // Safari 5.1+, Chrome 10+
+  // background-image: -o-linear-gradient($deg, $startColor, $endColor) // Opera 11.10
   background-image: linear-gradient($deg, $startColor, $endColor) // The standard
 
 $gradient-vertical-three-colors($startColor = #00b3ee, $midColor = #7a43b6, $colorStop = 50%, $endColor = #c3325f)
   background-color: mix($midColor, $endColor, 80%)
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), color-stop($colorStop, $midColor), to($endColor))
-  background-image: -webkit-linear-gradient($startColor, $midColor $colorStop, $endColor)
-  background-image: -moz-linear-gradient(top, $startColor, $midColor $colorStop, $endColor)
-  background-image: -ms-linear-gradient($startColor, $midColor $colorStop, $endColor)
-  background-image: -o-linear-gradient($startColor, $midColor $colorStop, $endColor)
-  background-image: linear-gradient($startColor, $midColor $colorStop, $endColor)
+  // background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), color-stop($colorStop, $midColor), to($endColor))
+  // background-image: -webkit-linear-gradient($startColor, $midColor $colorStop, $endColor)
+  // background-image: -moz-linear-gradient(top, $startColor, $midColor $colorStop, $endColor)
+  // background-image: -ms-linear-gradient($startColor, $midColor $colorStop, $endColor)
+  // background-image: -o-linear-gradient($startColor, $midColor $colorStop, $endColor)
+  background-image: linear-gradient(top, $startColor, $midColor $colorStop, $endColor)
   background-repeat: no-repeat
   filter: "progid:DXImageTransform.Microsoft$gradient(startColorstr=$startColor, endColorstr=$endColor, GradientType=0)" // IE9 and down
 
@@ -558,13 +558,13 @@ $gradient-radial($innerColor = #555, $outerColor = #333)
   background-repeat: no-repeat
   // Opera cannot do radial gradients yet
 
-$gradient-striped($color, $angle = -45deg)
+$gradient-striped($color, $angle = top left)
   background-color: $color
-  background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.25, rgba(255,255,255,.15)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(255,255,255,.15)), color-stop(.75, rgba(255,255,255,.15)), color-stop(.75, transparent), to(transparent))
-  background-image: -webkit-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
-  background-image: -moz-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
-  background-image: -ms-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
-  background-image: -o-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
+  // background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.25, rgba(255,255,255,.15)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(255,255,255,.15)), color-stop(.75, rgba(255,255,255,.15)), color-stop(.75, transparent), to(transparent))
+  // background-image: -webkit-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
+  // background-image: -moz-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
+  // background-image: -ms-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
+  // background-image: -o-linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
   background-image: linear-gradient($angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent)
 
 
